--- a/f-tep-portal/src/main/resources/app/styles/less/explorer/bottombar/databasket.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/explorer/bottombar/databasket.less
@@ -1,11 +1,17 @@
 @import "variable";
 #databasket {
     display: flex;
+    font-size: 0.6rem;
     flex-flow: column;
     flex: 1 1 auto;
     height: 100%;
+    width: 100%;
     h3 {
+        font-size: 1.2rem;
         margin-top: 0;
+    }
+    h4 {
+        font-size: 0.8rem;
     }
     .md-avatar {
         cursor: move;
