--- a/f-tep-portal/src/main/resources/app/styles/less/explorer/explorer.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/explorer/explorer.less
@@ -90,6 +90,8 @@
     }
     .item-list {
         md-list-item {
+            min-width: 0;
+            width: 100%;
             .md-avatar {
                 .material-icons {
                     text-align: center;
