--- a/f-tep-portal/src/main/resources/app/styles/less/navbar.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/navbar.less
@@ -1,6 +1,7 @@
 @import "variable";
 #navbar {
     background-color: @bg;
+    border: none;
     height: @navbar-height;
     margin-bottom: 0;
     z-index: 50;
